--- a/src/main/webapp/css/shop.css
+++ b/src/main/webapp/css/shop.css
@@ -1,8 +1,8 @@
-/*header*/
+/**************** header ******************/
 
-.header {
+header {
     border-top: 5px solid #5DA200;
-    height: 54px;
+    height: 40px;
     background-color: #F4F4F4;
     border-bottom: 1px solid #EEEEEE;
     padding: 0 10px;
@@ -10,12 +10,166 @@
     -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
     -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
+  
+}
+header h1 {
+    font-size: 16px;
+    color: #9ABD1E;
+    font-weight: bold;
+    display: inline-block;
+}
+.header-box {
+      max-width: 1200px;
 }
 
-.container-box {
-    margin: 2%;
+.tag-intranet {
+    font-size: 11px;
+    background-color:#9ABD1E;
+    padding: 2px 5px;
+    display: inline-block;
+    text-transform: uppercase;
+    color: #fff;
+    margin-left: 10px;
 }
-.container-box .login {
+.user {
+    display: inline-block;
+    position: absolute;
+    top: 4%;
+    right: 2%;
+    font-size: 12px;
+    color: #999;
+    font-family: 'Trebuchet MS'
+}
+.user a {
+    padding: 0 5px;
+}
+/*************** Plantilla login ***************/
+.container-box-login  {
+    margin: 6% auto;
+    max-width: 750px;
+}
+
+/*************** Plantilla ***************/
+.container-box-plantilla {
+    margin: 2% auto;
+    max-width: 1040px
+}
+.container-box-plantilla h2 {
+    border-bottom: 1px solid #EEEEEE;
+    font-size: 18px; 
+    padding: 10px 0;
+    font-family: 'Trebuchet MS';
+}
+h2.subtitulo {
+    color: #9EBE00;
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 0;
+    margin: 0 0 10px 0;
+    font-family: 'Trebuchet MS';
+}
+/*************** Orden de pago ***************/
+
+/* box verde destacado
+*/
+.box-green {
+    background-color: #F3F8DB;
+    padding:10px;
+    }   
 
 
+.cell {
+    display: table;
+    width: 100%;
+    }
+.cell-c1 {
+    display: table-cell;
+    width: 150px;
+    }
+.cell-c2 {
+    margin-left: 10px;
+    }
+
+.form-shop-row-left label,
+.form-shop-options-left p {
+    font-weight: bold;
+    }
+    .form-shop-options-left .form-shop {
+        margin: 2px 0 5px 10px;
+        }
+    .form-shop-options-left ul {
+        border-right: 1px solid #ccc;
+        padding-right: 20px;
+        display: inline-block;
+        }
+
+.combo-titular {
+    display: inline-block;
+    padding: 10px 20px 0 20px;
+    vertical-align: top;
+    width: 200px;
+    }
+    .combo-titular select {
+        width: 200px;
+    }
+
+
+.columnas-form {
+    margin: 10px 0 20px 0;
+    }
+
+    .columnas-form li {
+        display: inline-block;
+        width: 255px;
+        vertical-align: top;
+        margin-top: 20px;
+        
+    }
+    .columnas-form label{
+        width: 90px;
+        margin: 0;
+        padding:2px 4px 2px 0;
+
+    }
+.columnas-form select, .columnas-form input[type="text"] {
+  width: 150px;
 }
+    .columnas-form.col-three li {
+         width: 300px;
+    }
+     .columnas-form.col-three li label{
+         width: 120px;
+    }
+
+.action-columns {
+    margin: 10px 0 20px 0;
+    padding:0  0 15px 0;
+    border-bottom: 1px dotted #ccc;
+
+}
+    .action-columns li {
+        display: inline-block;
+        margin-right: 10px;
+    }
+
+.scroll-table {
+    overflow-x: scroll;    
+}
+.scroll-table .table-form {
+    width: 140%;
+
+}
+
+/***** actiones principales *****/
+.actions-form {
+    padding: 20px 0 0 0;
+    text-align: center;
+    background-color: #F2F2F2;
+    border-top: 1px solid #ccc;
+}
+
+.actions-form .action-columns {
+    margin: 0;
+    border: none;
+}
+
