--- a/src/main/webapp/css/shop.css
+++ b/src/main/webapp/css/shop.css
@@ -34,7 +34,7 @@ header h1 {
 .user {
     display: inline-block;
     position: absolute;
-    top: 4%;
+    top: 15px;
     right: 2%;
     font-size: 12px;
     color: #999;
