Fix importacion Shopmetrics

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -11,6 +11,10 @@ a.action {
   font-size: 10px;
 }
 
+a.btn-shop {
+  color: #ffffff;
+}
+
 .observacion label {
   float: left;
   margin-right: 15px;
