--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -182,3 +182,9 @@ div.loading-overlay {
   max-height: 390px;
   overflow-y: auto;
 }
+
+/** Column order selector */
+table thead a {
+  margin-left: 5px;
+  font-size: 12px;
+}
