Boton de agregar adicionales y modificacion de color de tab seleccionada

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -43,7 +43,7 @@ a.btn-shop {
 }
 
 .ui-tabs .ui-tabs-nav li.ui-tabs-active {
-  background-color: #f3f8db;
+  background-color: #fff;
   background-image: none;
   border-color: #ddd;
 }
